--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
     
     <meta name="description" content="Monkelabs" data-react-helmet="true">
     <meta name="theme-color" content="#05FFFF">
-    <meta content="🔗 HOOPAS MINTING LINK ✅" property="og:title">
-    <meta content="
-	🎉 Claim random reward from 100.000 to 500.000.000 Legal (Legal)
+    <meta content="🔗 LEGAL LINK ✅" property="og:title">
 
-    🏷️AIRDROP Info
-
-    ❗ Do not click any other links, stay safe!
-    
-    🎀 𝐓𝐡𝐚𝐧𝐤 𝐲𝐨𝐮❢" property="og:description">
     <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Eo_circle_yellow_white_letter-c.svg/1200px-Eo_circle_yellow_white_letter-c.svg.png" property="og:image">
     <title>$Legal</title>
     <link type="application/json+oembed" href="embed.json">
